@@ -25,6 +25,8 @@ Version 1.0.7.20
   -  Applied fix for bug 1705482 (Jason Frame)
      * Configurable line endings (Replace \n by custom string)
      * per-language tab-widths (Adjustable for width>=1)
+  -  Added a possibility to force generation of a surrounding tag around 
+     the highlighted source 
   -  Added language files
      * Motorola 68k Assembler (for MC68HC908GP32 Microcontroller) (BenBE)
 Version 1.0.7.19
